--- a/test-app/index.html
+++ b/test-app/index.html
@@ -5,11 +5,11 @@
     <script defer src="/main.js"></script>
     <link type="text/css" rel="stylesheet" href="/main.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Motel Test</title>
+    <title>Motel Tests</title>
   </head>
   <body>
     <div id="wrap">
-      <h1>Motel browser tests</h1>
+      <h1>Motel browser tests <span class="status"></span></h1>
       <div id="tests"></div>
     </div>
   </body>
